<resources>
    <string name="app_name">StudentsApp</string>

    <string name="student_details_title">Student Details</string>
    <string name="student_info_title">Student Info</string>
    <string name="label_student_name">Name</string>
    <string name="label_student_id">Student ID</string>
    <string name="label_student_phonenumber">Phone Number</string>
    <string name="label_student_address">Address</string>
    <string name="label_student_checked">Checked</string>
    <string name="value_yes">Yes</string>
    <string name="value_no">No</string>
    <string name="student_not_found">Student not found</string>
    <string name="format_student_id_line">ID: %1$s</string>
    <string name="edit_student">Edit Student</string>
    <string name="edit_screen_not_available">Edit screen not available yet</string>
    <string name="add_student_title">Add Student</string>
    <string name="error_empty_fields">Please fill both ID and Name</string>
    <string name="error_duplicate_id">A student with that ID already exists</string>
    <string name="delete_student">Delete Student</string>
    <string name="confirm_delete_message">Are you sure you want to delete this student?</string>
</resources>